--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
-    "drizzle-kit": "^0.31.1",
-    "drizzle-orm": "^0.43.1",
+    "drizzle-kit": "0.31.4",
+    "drizzle-orm": "0.44.5",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
     "postcss": "^8.5.3",
-    "postgres": "^3.4.5",
+    "postgres": "3.4.7",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
