feat: add LiteLLM integration with usage tracking and token counting

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ SUPABASE_SERVICE_ROLE_KEY=***
 # LiteLLM (if using a hosted/self-hosted LiteLLM proxy)
 LITELLM_BASE_URL=https://your-litellm.example.com
 LITELLM_MASTER_KEY=***
+
+# LiteLLM API Endpoints
+LITELLM_KEY_GENERATE_URL=https://your-litellm.example.com/key/generate
+LITELLM_KEY_UPDATE_URL=https://your-litellm.example.com/key/update
+LITELLM_TOKEN_COUNTER_URL=https://your-litellm.example.com/utils/token_counter
+LITELLM_SPEND_DAILY_URL=https://your-litellm.example.com/spend/daily
+LITELLM_MODEL_INFO_URL=https://your-litellm.example.com/models
