--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,15 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=***
 SUPABASE_SERVICE_ROLE_KEY=***
 
+# OAuth Providers (configure in Supabase Dashboard)
+# Google OAuth - Get from Google Cloud Console
+GOOGLE_CLIENT_ID=***
+GOOGLE_CLIENT_SECRET=***
+
+# GitHub OAuth - Get from GitHub Developer Settings
+GITHUB_CLIENT_ID=***
+GITHUB_CLIENT_SECRET=***
+
 # LiteLLM (if using a hosted/self-hosted LiteLLM proxy)
 LITELLM_BASE_URL=https://your-litellm.example.com
 LITELLM_MASTER_KEY=***
