--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "0.31.4",
     "drizzle-orm": "0.44.5",
+    "jest": "30.1.3",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
