feat: add user daily activity aggregation endpoint and timeout handling
- Introduced `getUserDailyActivityAggregated` method in `LiteLLMClient` to fetch aggregated user daily activity.
- Added timeout handling in `makeRequest` method to abort requests exceeding specified duration.
- Updated user daily activity URL to separate aggregated and non-aggregated endpoints.

feat(paystack): enhance payment initialization with currency handling and Supabase integration

- Implemented currency configuration for Paystack transactions, supporting both USD and KES.
- Integrated Supabase user authentication to retrieve UUID for payment metadata.
- Improved error handling and logging for payment initialization process.

refactor: remove payment verification fallback and unify payment processing logic

- Deleted redundant payment verification logic from middleware.
- Consolidated payment processing into a single function for better maintainability.

chore: remove outdated payment webhook function

- Deleted `payment-webhook` function as its logic has been integrated into the new `payment-function`.

docs: add repository guidelines and agent-specific notes

- Created `AGENTS.md` to outline project structure, coding style, testing guidelines, and commit conventions.

feat(pricing): implement payment success notification in pricing template

- Added toast notification for successful payment verification in the pricing template.
- Utilized session storage to prevent duplicate notifications.

feat(billing): create debug endpoint for billing information retrieval

- Implemented `/api/billing/debug` endpoint to fetch user credit balance and recent transactions.

feat(mpesa): add M-PESA payment initialization endpoint

- Created `/api/checkout/mpesa` endpoint to handle M-PESA payment requests.

feat(billing): develop credit balance card component

- Introduced `CreditBalanceCard` component to display user's credit balance with a call-to-action for purchasing more credits.

feat(payment): u

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,22 @@ PAYSTACK_SECRET_KEY=sk_test_***
 # Optional if using client-side initialization at any point
 PAYSTACK_PUBLIC_KEY=pk_test_***
 
+# Payments currency configuration
+# Set to 'KES' if your Paystack account is Kenyan and expects KES.
+# Defaults to 'USD' if unset.
+PAYSTACK_CURRENCY=USD
+# Fixed USD→KES conversion rate used when PAYSTACK_CURRENCY=KES
+# e.g., 1 USD = 129 KES
+USD_TO_KES_RATE=129
+
+# Supabase Edge Function name to use for Paystack callbacks/webhooks
+# Set to 'payment-function' if that's the deployed function name in your project
+PAYSTACK_FUNCTION_NAME=payment-function
+
+# After successful payment, the Edge Function redirects here (appended to BASE_URL)
+# Default is '/dashboard'. If you have a billing page, set '/dashboard/billing'.
+POST_PAYMENT_REDIRECT_PATH=/dashboard
+
 # Supabase project (for Edge Functions)
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=***
@@ -26,10 +42,3 @@ GITHUB_CLIENT_SECRET=***
 # LiteLLM (if using a hosted/self-hosted LiteLLM proxy)
 LITELLM_BASE_URL=https://your-litellm.example.com
 LITELLM_MASTER_KEY=***
-
-# LiteLLM API Endpoints
-LITELLM_KEY_GENERATE_URL=https://your-litellm.example.com/key/generate
-LITELLM_KEY_UPDATE_URL=https://your-litellm.example.com/key/update
-LITELLM_TOKEN_COUNTER_URL=https://your-litellm.example.com/utils/token_counter
-LITELLM_SPEND_DAILY_URL=https://your-litellm.example.com/spend/daily
-LITELLM_MODEL_INFO_URL=https://your-litellm.example.com/models
