docs: overhaul README for Inference Platform; harden .gitignore
- Rebrand and rewrite README to reflect Inference Platform SaaS, updating features, setup, and stack (Next.js 15, Supabase Auth, Paystack, Drizzle).
- Expand .gitignore to cover env variants (ignore .env.*, keep .env.example), include .env.local/.env*.local, pnpm/bun debug logs, IDE/OS artifacts, lint/Jest/turbo caches, and tidy duplicates.
- Improves developer experience, avoids committing secrets/noisy files, and aligns docs with the new product direction.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "typecheck": "bunx tsc --noEmit",
     "db:setup": "bunx tsx lib/db/setup.ts",
     "db:seed": "bunx tsx lib/db/seed.ts",
     "db:generate": "drizzle-kit generate",
@@ -30,6 +31,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
+    "motion": "^11.0.0",
     "postcss": "^8.5.3",
     "postgres": "3.4.7",
     "radix-ui": "^1.4.2",
