--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# package managers (additional)
+pnpm-debug.log*
+bun-debug.log*
+
 # local env files
 .env
+# ignore all env variants except the example
+.env.*
+!.env.example
+# local/docker-specific envs (explicit, some tools look for this exact name)
+.env.local
+.env*.local
 
 # vercel
 .vercel
@@ -38,4 +48,20 @@ next-env.d.ts
 
 # Docker
 postgres_data/
-.env*.local
+
+# Editors/IDE
+.idea/
+*.swp
+
+# Windows
+Thumbs.db
+
+# Lint/format caches
+.eslintcache
+
+# Jest cache (in case local config writes outside node_modules cache)
+/.jest/
+/.jest-cache/
+
+# Turbopack / Turborepo cache (if enabled)
+.turbo/
