build(docker-compose): map inference-web to host port 4317
- Change ports from 3000:3000 to 4317:3000 to avoid conflicts with local apps on 3000
- Container still listens on 3000; only the host port changes
- Add inline comment clarifying the host:container mapping

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: inference-web
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "4317:3000" # Host:Container — uncommon host port to avoid conflicts
     env_file:
       - .env
     environment:
