--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,19 @@ services:
   web:
     build:
       context: .
+      args:
+        POSTGRES_URL: ${POSTGRES_URL}
+        SUPABASE_URL: ${SUPABASE_URL}
+        SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+        SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+        PAYSTACK_SECRET_KEY: ${PAYSTACK_SECRET_KEY}
+        BASE_URL: ${BASE_URL}
+        LITELLM_BASE_URL: ${LITELLM_BASE_URL}
+        LITELLM_MASTER_KEY: ${LITELLM_MASTER_KEY}
+        PAYSTACK_FUNCTION_NAME: ${PAYSTACK_FUNCTION_NAME:-payment-function}
+        POST_PAYMENT_REDIRECT_PATH: ${POST_PAYMENT_REDIRECT_PATH:-/dashboard/billing}
+        PAYSTACK_CURRENCY: ${PAYSTACK_CURRENCY:-USD}
+        USD_TO_KES_RATE: ${USD_TO_KES_RATE:-129}
     image: inference-web:latest
     container_name: inference-web
     restart: unless-stopped
@@ -11,6 +24,7 @@ services:
       - .env
     environment:
       # Required (set in .env or Coolify secrets)
+      - POSTGRES_URL=${POSTGRES_URL}
       - BASE_URL=${BASE_URL}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
