--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "motion": "12.23.16",
-    "next": "15.4.0-canary.47",
+    "next": "15.5.3",
     "postcss": "^8.5.3",
     "postgres": "3.4.7",
     "radix-ui": "^1.4.2",
