--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:run": "NODE_OPTIONS=--dns-result-order=ipv4first bunx tsx lib/db/migrate.ts"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "1.3.1",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/postcss": "4.1.7",
